# backend/app/controllers/api/orders_controller.rb
@@ -1,5 +1,10 @@
 module Api
   class OrdersController < ApplicationController
+    def index
+      result = Orders::ListOrders.with(page: params[:page])
+      render json: serialize_collection(result[:orders], meta: result[:meta]), status: :ok
+    end
+
     def create
       order = Orders::CreateOrder.with(params: order_params)
       render json: serialize(order), status: :created
