# backend/swagger/swagger.yaml
@@ -6,6 +6,48 @@ info:
   description: Order management API following JSON:API specification
 paths:
   "/api/orders":
+    get:
+      summary: Lists orders
+      tags:
+      - Orders
+      parameters:
+      - name: page
+        in: query
+        required: false
+        description: Page number
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: orders listed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/order_output"
+                  meta:
+                    type: object
+                    properties:
+                      current_page:
+                        type: integer
+                        example: 1
+                      total_pages:
+                        type: integer
+                        example: 2
+                      total_count:
+                        type: integer
+                        example: 7
+                    required:
+                    - current_page
+                    - total_pages
+                    - total_count
+                required:
+                - data
+                - meta
     post:
       summary: Creates an order
       tags:
